--- a/src/FRONTEND/navbar/navbar_css/caregiver.css
+++ b/src/FRONTEND/navbar/navbar_css/caregiver.css
@@ -1,14 +1,19 @@
-.caregiver{
+.caregiver-info p,
+span {
+  color: black;
+}
+
+
+.caregiver {
     height: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    background-color: #F7F9FB;
+    background-color: #f7f9fb;
     padding-bottom: 40px;
-}
-
-
-.notification {
+  }
+  
+  .dashboard-notification {
     background-color: #687864;
     border-radius: 0 0 20px 20px;
     height: 100px;
@@ -19,66 +24,65 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-}
-
-.small-profile-image{
+  }
+  
+  .small-profile-image {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     background-color: white;
-}
-.welcome-user{
+  }
+  
+  .welcome-user {
     text-align: left;
     font-size: 14px;
-}
-
-.welcome-user p{
-    margin: 2px 0;  
-}
-
-.nofi-icon{
+  }
+  
+  .welcome-user p {
+    margin: 2px 0;
+  }
+  
+  .nofi-icon {
     width: 25px;
     height: 25px;
     padding: 3px;
     border: 0.5px solid white;
     border-radius: 10px;
-}
-
-.caregiver-selection{
+  }
+  
+  .caregiver-selection {
     padding-top: 25px;
-}
-
-.sort-container{
+  }
+  
+  .sort-container {
     display: flex;
     flex-direction: row;
     padding-left: 25px;
-    /* padding-top: 20px; */
-}
-
-.caregiver-info{
+  }
+  
+  .caregiver-info {
     padding: 20px;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap; 
-}
-
-.caregiver-list{
-    width: calc(50% - 20px); /* Set the width of each item, considering margins */
+    flex-wrap: wrap;
+  }
+  
+  .caregiver-list {
+    flex: 0 0 calc(50% - 20px);
     margin: 10px;
     background-color: white;
     border-radius: 15px;
-    display:flex;
-    flex-direction: column;
+    overflow: hidden;
+  }
     
-}
-
-.caregiver-list img{
+  .caregiver-image-container{
     background-color: #687864;
+    height: 80px; 
+    width: 100%;
+    padding: 0 15px;
     border-radius: 15px 15px 0 0;
-    height: 60px;
+  }
 
-}
-.caregiver-name-container{
+  .caregiver-name-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -86,37 +90,39 @@
     padding: 0 15px;
     font-size: 12px;
     margin: 10px 0;
-}
-
-
-.caregiver-price-container{
+  }
+  
+  .caregiver-price-container {
     text-align: left;
     padding: 0 15px;
     font-size: 12px;
     margin-bottom: 10px;
-}
-
-.sorting-button{
+  }
+  
+  .sorting-button {
     background-color: white;
     border-radius: 5px;
-    border: 1px solid #8FC1E3;
+    border: 1px solid #8fc1e3;
     padding: 3px 7px;
     margin-left: 5px;
-}
-.sorting-button:active{
-    background-color: #8FC1E3;
-}
-
-.highlight {
+  }
+  
+  .sorting-button:active {
+    background-color: #8fc1e3;
+  }
+  
+  .highlight {
     font-weight: bold;
-    background-color: #8FC1E3;
+    background-color: #8fc1e3;
     width: fit-content;
     border-radius: 20px;
+    padding: 5px 7px;
   }
-.rating-highlight{
-    padding: 2px 7px;
+  
+  .rating-highlight {
+    padding: 5px 7px;
     border-radius: 10px;
-    background-color: #8FC1E3;
+    background-color: #8fc1e3;
     font-weight: bold;
-}  
-
+  }
+  
