--- a/src/FRONTEND/navbar/navbar_css/dashboard.css
+++ b/src/FRONTEND/navbar/navbar_css/dashboard.css
@@ -10,7 +10,7 @@
 .dashboard-notification{
     background-color: #687864;
     border-radius: 0 0 20px 20px;
-    height: 100px;
+    height: 120px;
     padding: 0 25px;
     padding-top: 25px;
     color: white;
@@ -34,6 +34,7 @@
 
 .welcome-user p{
     margin: 2px 0;  
+    color: white;
 }
 
 .nofi-icon{
